--- a/panel/panel-frontend/index.html
+++ b/panel/panel-frontend/index.html
@@ -12,7 +12,7 @@
   <script>
     var global = global || window
   </script>
-  <script type="module" src="/src/main.js"></script>
+  <script lang="ts" type="module" src="/src/main.ts"></script>
 </body>
 
 </html>
